<resources>
    <string name="app_name"> </string>
    <string name="title_activity_splash_sreen">SplashSreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Sing In</string>
    <string name="registro">Sing Up</string>
    <string name="descriptionLogo">Logo yard sale</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="sing_up">Sing Up</string>
    <string name="email_address">Email address</string>
    <string name="phone_nuumber">Phone number</string>
    <string name="imagen">imagen</string>
    <string name="welcome">Welcome !!</string>


</resources>