<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_claro"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/logoLogin"
        style="@style/ImageViewLogo"
        android:contentDescription="@string/descriptionLogo"
        android:src="@drawable/ic_logo_yard_sale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextTitlePri"
        android:text="@string/sing_up"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.516" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        style="@style/TextViewUser"
        android:drawableStart="@drawable/vector_person"
        android:hint="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.187" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/TextViewUser"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:layout_constraintVertical_bias="0.454" />

    <EditText
        android:id="@+id/editTextPhone"
        style="@style/TextViewUser"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/phone"
        android:ems="10"
        android:hint="@string/phone_nuumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />


    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/TextViewUser"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/vector_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <Button
        android:id="@+id/button"
        style="@style/bottonsUp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/borde_redondo"
        android:text="@string/sing_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.459" />

</androidx.constraintlayout.widget.ConstraintLayout>